# stateful-pdf-chat

./: .env.example  .gitignore  README.md  ingest.py  pyproject.toml  server.py  worker.py
deep_research/: __init__.py  models.py  workflows.py
deep_research/templates/: index.html
research_papers/: README.md
