[project]
name = "stateful-pdf-chat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "langsmith>=0.1.0",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]
